Creado mediante Colaboratory

--- a/template.ipynb
+++ b/template.ipynb
@@ -6,7 +6,6 @@
       "name": "intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNL+smjD15zJXOVGJFxWm0x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +35,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BMiTSxLhrZP3",
-        "outputId": "bc7d2e54-b20e-40d5-d2cf-614a9080ee5b"
+        "outputId": "d5d82c49-6e30-48e0-f900-29659323925e"
       },
       "outputs": [
         {
@@ -49,6 +48,29 @@
       ],
       "source": [
         "print(\"hola\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"hello\")"
+      ],
+      "metadata": {
+        "id": "HDMTk-v5t4kW",
+        "outputId": "bc214f2b-96c7-4afd-bdee-5750ac4ffd19",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello\n"
+          ]
+        }
       ]
     }
   ]
